src/components/division/infiniteCarousel/InfiniteCarousel.module.css
.container {
    height: 20rem;
    width: 700px;
}

.scroller {
    padding-block: 1rem;
    
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
}

.container[data-animated=true] {
    overflow: hidden;
    mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
    -webkit-mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
}

.container[data-animated=true] .scroller {
    width: max-content;
    flex-wrap: nowrap;
    animation: 
        scroll 
        var(--_animation-duration, 40s)
        var(--_animation-direction, forwards)
        linear
        infinite;
}

.container[data-direction="right"] {
    --_animation-direction: reverse;
}

.container[data-direction="left"] {
    --_animation-direction: forwards;
}

.container[data-duration="slow"] {
    --_animation-duration: 60s;
}

.container[data-duration="fast"] {
    --_animation-duration: 20s;
}

@keyframes scroll {
    to {
        transform: translate(calc(-50% - 0.5rem));
    }
}

